# Homebrew-Details

./: .gitignore  CONTRIBUTING.md  Homebrew-Details.sln  Homebrew-Details.vcxproj  Homebrew-Details.vcxproj.filters  Makefile  README.md  build_and_run.sh  homebrew_details.nacp  icon.psd  meson.build
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-crash-report.md
assets/: arrow.psd  banner.psd  banner_plain.psd  credits.psd  download.psd  style_beta.psd  style_flow.psd  style_list.psd  warning.psd  warning_arrows.psd  wide_icon.psd
include/: main.h
include/pages/: apps_list_page.hpp  info_page.hpp  intro_page.hpp  issue_page.hpp  layout_select_page.hpp  main_page.hpp  scanning_page.hpp  test_grid_page.hpp  update_page.hpp  updating_page.hpp
include/utils/: base64.h  blacklist.h  favorites.h  launching.h  modules.h  nacp_utils.h  notes.h  panels.h  reboot_to_payload.h  scanning.h  settings.h  update.h  utilities.h
releases/: HomebrewDetailsForwarder.nsp  HomebrewDetailsForwarderAlt.nsp  HomebrewDetails_MultiForwarder.nsp
resources/: .gitignore  hbmenu-forward.nro
resources/i18n/en-US/: brls.json
resources/i18n/ko/: brls.json
scripts/: i18n-linter.py
src/: base64.cpp  intro_page.cpp  intro_page.hpp  issue_page.cpp  launching.cpp  launching.h  main.cpp  main_page.cpp  main_page.hpp  nacp_utils.cpp  nacp_utils.h  nacp_win.cpp  reboot_to_payload.cpp  reboot_to_payload.h  settings.cpp  settings.h  update_page.cpp  update_page.hpp  utilities.cpp  utilities.h
src/pages/: apps_list_page.cpp  info_page.cpp  intro_page.cpp  issue_page.cpp  layout_select_page.cpp  main_page.cpp  scanning_page.cpp  test_grid_page.cpp  update_page.cpp  updating_page.cpp
src/utils/: base64.cpp  blacklist.cpp  favorites.cpp  launching.cpp  modules.cpp  nacp_utils.cpp  notes.cpp  panels.cpp  reboot_to_payload.cpp  scanning.cpp  settings.cpp  update.cpp  utilities.cpp
